<resources>
    <string name="title_activity_login">LoginActivity</string>

    <string name="app_name">Evo</string>
    <string name="tagline">Центр развития личности</string>

    <string name="nice_to_see">Рады приветствовать!</string>
    <string name="meditate_focus">Медитируй. Фокусируйся на важном. Живи здоровой жизнью.</string>
    <string name="enter_by_email">Войти через Email</string>
    <string name="dont_have_an_account">Нет учетной записи?</string>
    <string name="sign_up"> Зарегистрироваться</string>

    <string name="welcome">Добро пожаловать!</string>
    <string name="sign_up_access">Зарегистрируйтесь, чтобы получить доступ ко всем нашим медитациям.</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="dont_have_an_account_yet">Ещё нет аккаунта? </string>

    <string name="registration">Регистрация</string>
    <string name="name_login_password">Напишите свое имя, логин и пароль</string>
    <string name="name">Имя</string>
    <string name="have_an_account">Уже есть аккаунт?</string>

    <string name="good_afternoon">Доброго дня,</string>
    <string name="how_do_you_feel">Как Вы себя чувствуете сегодня?</string>
    <string name="calm">Спокойствие</string>
    <string name="relax">Расслабление</string>
    <string name="focus">Фокус</string>
    <string name="body_of_light">Тело света</string>
    <string name="personal_development">Развитие личности через развитие знергетического поля.</string>

    <string name="title_of_sounds">Иногда самое продуктивное, что Вы можете сделать - это расслабиться.</string>
    <string name="start">начать</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="info1">Центр развития личности ”ЭВО” работает в международном формате, в нём занимаются люди более чем из 20 стран. Обучение прошли более 10 000 человек.</string>
    <string name="info2">В образовательных программах центра “ЭВО” мы используем научный подход, это классическая психология — Юнга и Фрейда. Также мы используем метафизический подход: астрология, биоэнергетика, сверх-интуиция, нумерология, науки древних забытых цивилизаций Майя, Хопи, Шумерские традиции. В более жизненных — бытовых уроках мы применяем современные достижения в области сознания, нейропсихологии, маркетинга.</string>
    <string name="directions">В школе четыре основных направления:</string>
    <string name="first_direction"><b>Первое: «Тело света»</b>, направление более эзотерическое, но в нем присутствует научный подход. Мы изучаем энергетическое поле человека и помогаем развивать личность через медитации и через развитие энергетического поля человека.</string>
    <string name="second_direction"><b>Второй проект: «Сакральная геометрия – Мандалы»</b> — этот проект признан во многих странах и подтвержден научными исследованиями. В нем мы помогаем своим ученикам через мандалы и прорисовку трансформационных структур изменить свое сознание, а также посредством биорезонансных наработок улучшить свое здоровье, свои отношения и ресурсное состояние.</string>
    <string name="third_direction"><b>Третий проект: «Энергетические практики»</b> — более направлен на медитации и особые упражнения, потому что в нем обучающая методика основана на биоэнергетике и экстрасенсорике человека. Но в ближайшем будущем, не смотря на отношение скептиков, это станет одним из направлений современных наук.</string>
    <string name="third_direction2">В рамках проекта мы помогаем прокачать внутренние способности — энерго-способности, потенциал человека и направляем эти инструменты духовного роста на улучшение здоровья, налаживание отношений и прокачку ресурсных каналов.</string>
    <string name="fourth_direction"><b>Четвертый проект: «Предназначение»</b> — это новое направление, совсем недавно открылось. В нем мы помогаем найти ответ на ключевые вопросы для каждого человека: «Как найти свое дело жизни и при этом получать достойный доход? Как найти свое место в жизни и быть полезным своей семье, обществу? Как стать ключиком, элементом не только в обычном мире, но и в более глобальном видении».</string>
</resources>