<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B5563"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LogInActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/sign_up_access"
        android:textColor="#e3e3e3"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/log_in_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#BEC2C2"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="#ffffff"
        android:textColorHint="#BEC2C2"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/log_in_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#BEC2C2"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="#ffffff"
        android:textColorHint="#BEC2C2"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="#BEC2C2"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnter"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#92E0D3"
        android:padding="10dp"
        android:text="@string/enter"
        android:textColor="#253334"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:context=".LogInActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_yet"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/enter_to_sign_up_from_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>