<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B5563"
    android:orientation="vertical"
    tools:context=".RegUser.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_gravity="bottom"
            android:src="@drawable/bg_leaves" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|top|center_vertical"
            android:orientation="vertical"
            android:padding="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/registration"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="22dp"
                android:text="@string/name_login_password"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#BEC2C2"
                android:hint="@string/name"
                android:paddingStart="12dp"
                android:selectAllOnFocus="true"
                android:textColor="#ffffff"
                android:textColorHint="#BEC2C2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#BEC2C2"
                android:hint="@string/email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:selectAllOnFocus="true"
                android:textColor="#ffffff"
                android:textColorHint="#BEC2C2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#BEC2C2"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:selectAllOnFocus="true"
                android:textColor="#ffffff"
                android:textColorHint="#BEC2C2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="#92E0D3"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#253334"
                android:textSize="16sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/enter_by_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/enter"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>