<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LogInSignUpActivity">

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="161dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/nice_to_see"
        android:textColor="#283E3F"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/meditate_focus"
        android:textAlignment="center"
        android:textColor="#283E3F"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo_for_log_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fourth"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/third"
        android:layout_centerInParent="true"
        android:backgroundTint="#92E0D3"
        android:onClick="enter_by_email"
        android:padding="10dp"
        android:text="@string/enter_by_email"
        android:textAlignment="center"
        android:textColor="#253334"
        android:textSize="16sp"
        app:cornerRadius="5dp" />

    <LinearLayout
        android:id="@+id/justId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourth"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:onClick="sign_up_from_log_in_sign_up"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/justId"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_to_main"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#92E0D3"
            android:onClick="enter_without_auth"
            android:padding="15dp"
            android:text="Временная кнопка входа"
            android:textColor="#000000"
            android:textSize="10sp"
            app:cornerRadius="25dp" />
    </LinearLayout>
</RelativeLayout>