<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="15dp">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/body_of_light"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc_textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/title_textView"
            android:layout_marginBottom="-50dp"
            android:text="@string/personal_development"
            android:textColor="#000000"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/card_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_1"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/desc_textView"
            android:layout_marginTop="50dp"
            android:backgroundTint="#253334"
            android:onClick="enter_in_sound_playlist"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="#fcfcfc"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_button_start"
            app:iconGravity="textEnd"
            app:iconPadding="16dp"
            app:iconTint="@color/white" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

