<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B5563"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/good_afternoon"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_name_SP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="4dp"
                android:text=" Имя"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/how_do_you_feel"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calm"
                android:layout_width="55dp"
                android:layout_height="57dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_status_calm" />

            <TextView
                android:id="@+id/text_calm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/calm"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/calm"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/relax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_status_relax" />

            <TextView
                android:id="@+id/text_relax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relax"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/relax"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_status_focus" />

            <TextView
                android:id="@+id/text_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/focus"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="26dp"
                android:text="@string/focus"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listItemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/activity_main_list_item" />
    </LinearLayout>
</LinearLayout>